# vscode-test

test/: CMakeLists.txt  test.code-workspace
test/src/: CMakeLists.txt  main.c
test/src/config/: sdk_config.h
tools/: CMake_nRF52.cmake
